# Clip

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: PLUGIN_GUIDE.md
src/: index.html  main.ts  palette.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  storage.rs  utils.rs  windows.rs
src/lib/: config.ts  plugins.ts  state.ts  tauri.ts  utils.ts
src/plugins/: sample-plugin.ts
src/types/: plugin.ts
